--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "postcss-import": "^13.0.0",
     "postcss-loader": "^4.1.0",
     "postcss-nested": "^5.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+    "vue-feather-icons": "^5.1.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@fullhuman/postcss-purgecss": "^3.0.0"
   }
 }
